Updated to 1.21.10 & added title styling