@@ -2,7 +2,6 @@ package edu.byu.minecraft.cat.commands;
 
 import com.mojang.brigadier.CommandDispatcher;
 import com.mojang.brigadier.arguments.ArgumentType;
-import com.mojang.brigadier.arguments.BoolArgumentType;
 import com.mojang.brigadier.arguments.StringArgumentType;
 import com.mojang.brigadier.context.CommandContext;
 import edu.byu.minecraft.cat.CivsAndTitles;
@@ -50,14 +49,15 @@ public class TitleCommands {
         new InteractiveDisplay<String, Title>(Arrays.asList("titles", "display"), new InteractiveDisplay.DisplayProvider<String, Title>() {
             @Override
             public Text getSimpleText(Title title , CommandContext<ServerCommandSource> ctx) {
-                MutableText text = Text.literal("").append( TagParser.SIMPLIFIED_TEXT_FORMAT_SAFE.parseText(title.color(), ParserContext.of()));//Text.literal(title.title()).setStyle(Style.EMPTY.withColor(Formatting.valueOf(title.color().toUpperCase())).withBold(Boolean.TRUE)));
-                text.append(Text.literal(" - ").setStyle(Style.EMPTY));
+                MutableText text = Text.empty();
+                text.append(title.format());//Text.literal(title.title()).setStyle(Style.EMPTY.withColor(Formatting.valueOf(title.format().toUpperCase())).withBold(Boolean.TRUE)));
+                text.append(Text.literal(" - "));
                 ServerPlayerEntity player = ctx.getSource().getPlayer();
                 try {
                     UnlockedTitleDAO dao = CivsAndTitles.getDataAccess().getUnlockedTitleDAO();
                     Collection<UnlockedTitle> titles = dao.getAll(player.getUuid());
-                    String equipedTitle = CivsAndTitles.getDataAccess().getPlayerDAO().get(player.getUuid()).title();
-                    if(title.title().equals(equipedTitle)){
+                    String equippedTitle = CivsAndTitles.getDataAccess().getPlayerDAO().get(player.getUuid()).title();
+                    if(title.title().equals(equippedTitle)){
                         text.append(Text.literal("Active"));
                     } else if(titles.stream().anyMatch((x)-> x.title().equals(title.title()))){
                         text.append(Text.literal("Unlocked"));
@@ -73,9 +73,10 @@ public class TitleCommands {
 
             @Override
             public Text getDetailedText(Title title, CommandContext<ServerCommandSource> ctx) {
-                MutableText text = Text.literal("").append(TagParser.SIMPLIFIED_TEXT_FORMAT_SAFE.parseText(title.color(), ParserContext.of()));// Text.literal(title.title()).setStyle(Style.EMPTY.withColor(Formatting.valueOf(title.color().toUpperCase())).withBold(Boolean.TRUE)));
+                MutableText text = Text.empty();
+                text.append(title.format());// Text.literal(title.title()).setStyle(Style.EMPTY.withColor(Formatting.valueOf(title.format().toUpperCase())).withBold(Boolean.TRUE)));
                 text.append(Text.literal( "\n"));
-                text.append(Text.literal( "Type: " + title.type().name() +"\n").setStyle(Style.EMPTY));
+                text.append(Text.literal( "Type: " + title.type().name() +"\n").setStyle(Style.EMPTY.withColor(Formatting.WHITE)));
                 text.append(Text.literal(title.description() + "\n"));
                 ServerPlayerEntity player = ctx.getSource().getPlayer();
                 try {
@@ -90,7 +91,7 @@ public class TitleCommands {
                         text.append(Text.literal("(Remove)").setStyle(Style.EMPTY.withColor(Formatting.YELLOW).withClickEvent(new ClickEvent.RunCommand("titles clear"))));
 
                     } else if(!titleList.isEmpty()){
-                        text.append(Text.literal("Unlocked " + titleList.get(0).earned()));
+                        text.append(Text.literal("Unlocked " + titleList.getFirst().earned()));
                         text.append("\n");
                         text.append(Text.literal("(Set Active)").setStyle(Style.EMPTY.withColor(Formatting.YELLOW).withClickEvent(new ClickEvent.RunCommand("titles change " +title.title()))));
                     }
@@ -98,7 +99,7 @@ public class TitleCommands {
                         text.append(Text.literal("Not Unlocked"));
                     }
                     text.append("\n");
-                    if(playerInfo.role() == Player.Role.ADMIN) {
+                    if(player.getPermissionLevel() >= 2) {
                         text.append(Text.literal("(Edit)").setStyle(Style.EMPTY.withColor(Formatting.YELLOW).withClickEvent(new ClickEvent.RunCommand("titles admin edit " +title.title()))));
                     }
                 } catch (DataAccessException e) {
